tests/paczka1/fuzzy1/88427641.err
Error in line 3: OfsR3epV0d S186 -1,2
Error in line 11: 1GnRg S186 18,1
Error in line 16: UoKtW2fd S849 58,7
Error in line 25: 1GnRg S186 89,6
Error in line 2: OfsR3epV0d S186 82,5
Error in line 30: 1GnRg S634 15,9
Error in line 32: OfsR3epV0d S849 55,0
Error in line 36: OfsR3epV0d S186 14,9
